; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_encode-basic.c_rle_close.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_encode-basic.c_rle_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rle = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @rle_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rle_close(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.rle*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.rle*
  store %struct.rle* %7, %struct.rle** %5, align 8
  %8 = load %struct.rle*, %struct.rle** %5, align 8
  %9 = getelementptr inbounds %struct.rle, %struct.rle* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %24 [
    i32 128, label %11
    i32 130, label %12
    i32 131, label %16
    i32 129, label %20
  ]

11:                                               ; preds = %2
  br label %24

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.rle*, %struct.rle** %5, align 8
  %15 = call i32 @rle_flush_diff(i32* %13, %struct.rle* %14)
  br label %24

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  %18 = load %struct.rle*, %struct.rle** %5, align 8
  %19 = call i32 @rle_flush_diff(i32* %17, %struct.rle* %18)
  br label %24

20:                                               ; preds = %2
  %21 = load i32*, i32** %3, align 8
  %22 = load %struct.rle*, %struct.rle** %5, align 8
  %23 = call i32 @rle_flush_same(i32* %21, %struct.rle* %22)
  br label %24

24:                                               ; preds = %2, %20, %16, %12, %11
  %25 = load i32*, i32** %3, align 8
  %26 = load %struct.rle*, %struct.rle** %5, align 8
  %27 = getelementptr inbounds %struct.rle, %struct.rle* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @fz_write_byte(i32* %25, i32 %28, i32 128)
  ret void
}

declare dso_local i32 @rle_flush_diff(i32*, %struct.rle*) #1

declare dso_local i32 @rle_flush_same(i32*, %struct.rle*) #1

declare dso_local i32 @fz_write_byte(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
